<resources>
    <string name="app_name">Lumbi</string>
    <string name="email">Email</string>
    <string name="passwordText">Password</string>
    <string name="signup_button_text">signup</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="password_hint">password</string>
    <string name="date_of_birth_hint">date of birth</string>
    <string name="email_address_hint">email address</string>
    <string name="surname_hint">Surname</string>
    <string name="firstname_hint">Firstname</string>
    <string name="sign_up_title">sign up</string>
    <string name="company_logo_description">company_logo</string>
    <string name="login_button_text">login</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="reset_chooser_title">open password reset email with</string>
    <string name="forgotpassword">ForgotPassword?</string>
    <string name="fullname_label">Edmond Walker</string>
    <string name="email_label_string">edwalker@gmail.com</string>
    <string name="edmond_walker">edmond walker</string>
    <string name="edwalker_gmail_com">edwalker@gmail.com</string>
    <string name="username">username</string>
    <string name="update_account">update account</string>
    <string name="cancel">Cancel</string>
    <string name="day">Day</string>
    <string name="_1">1</string>
    <string name="learner">Learner</string>


</resources>