<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_bg"
    tools:parent_context=".SignupActivity">

    <ImageView
        android:id="@+id/companyLogo"
        android:layout_width="141dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/company_logo_description"
        android:src="@drawable/mother" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_below="@+id/companyLogo"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:hint="@string/firstname_hint"
        android:inputType="textCapSentences"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/surName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstName"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="10dp"
        android:hint="@string/surname_hint"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="textCapSentences"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/surName"
        android:hint="@string/email_address_hint"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="textEmailAddress"

        />
    <EditText
        android:id="@+id/birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailAddress"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="10dp"
        android:hint="@string/date_of_birth_hint"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthday"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password_hint"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="textPassword"
        />
    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password_hint"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="textPassword"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmPassword"
        android:text="signup"
        android:textAllCaps="false"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#50A4B2"
        android:shadowRadius="@android:integer/config_longAnimTime"
        />

    <TextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_an_account_text" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FF915A"
        android:shadowRadius="@android:integer/config_longAnimTime"
        android:text="@string/login_button_text"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:onClick="goToLogin"/>

</RelativeLayout>