<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_bg"
    tools:parent_context=".SignupActivity">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/middle"
        android:layout_width="394dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:hint="@string/firstname_hint"
            android:inputType="textCapSentences"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/surName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstName"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:hint="@string/surname_hint"
            android:inputType="textCapSentences"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/surName"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:hint="how old?"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/black"

            />
        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:hint="A boy or girl?"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/black" />
        <EditText
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gender"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="70dp"
            android:hint="@string/date_of_birth_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="53dp"
        android:backgroundTint="#FF915A"
        android:onClick="goToLogin"
        android:shadowRadius="@android:integer/config_longAnimTime"
        android:text="submit"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="682dp"
        android:text="Lumbi"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="123dp"
        android:text="Add Child"
        android:textColor="#FFE9DB"
        android:textSize="40sp"
        android:textStyle="bold">

    </TextView>


</RelativeLayout>